--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/frontend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/frontend.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: frontend
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/thejaysmith/myfrontend:v1
+        image: igagankalra/grafana-frontend:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
@@ -22,10 +23,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  labels:
+    app: frontend
 spec:
   selector:
     app: frontend
   ports:
-    - port: 8080
+    - name: frontend
+      port: 8082
       targetPort: 8080
   type: LoadBalancer
