--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/trial.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/trial.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: trial-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: trial
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: trial
-        image: ghcr.io/thejaysmith/trial:v1
+        image: igagankalra/obs-trial:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
@@ -22,10 +23,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: trial-service
+  labels:
+    app: trial
 spec:
   selector:
     app: trial
   ports:
-    - port: 8082
+    - name: trial
+      port: 8082
       targetPort: 8080
   type: LoadBalancer
